chore(deps): update all non-major dependencies (#248)
* chore(deps): update all non-major dependencies

* chore: Update badges

* feat: Add SBOM support

* chore: Remove Code Scanning Result Upload

* refactor: Apply OpenRewrite for migration to Java 21

* refactor: Apply OpenRewrite for migration to Spring Boot 3.3

* refactor: Apply OpenRewrite for static imports removal

* refactor: Apply OpenRewrite for another static imports removal

* chore: Add rewrite.yml

---------

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>
Co-authored-by: Branislav Beno <brano.beno@gmail.com>