@@ -3,7 +3,6 @@ package com.ronja.crm.ronjaserver.exception;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import jakarta.validation.ConstraintViolationException;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.ControllerAdvice;
@@ -17,13 +16,13 @@ public class GlobalExceptionHandler {
 
     private final ObjectMapper mapper;
 
-    public GlobalExceptionHandler(@Autowired ObjectMapper mapper) {
+    public GlobalExceptionHandler(ObjectMapper mapper) {
         this.mapper = mapper;
     }
 
     @ExceptionHandler(ConstraintViolationException.class)
     public ResponseEntity<String> inputValidationException(ConstraintViolationException e) throws JsonProcessingException {
-        String message = String.format("Invalid request: %s", e.getMessage());
+        String message = "Invalid request: %s".formatted(e.getMessage());
 
         if (e.getConstraintViolations() != null) {
             List<Violation> violations = e.getConstraintViolations().stream()
