@@ -1,15 +1,14 @@
 package com.ronja.crm.ronjaserver.repository;
 
 import com.ronja.crm.ronjaserver.entity.Customer;
+import org.assertj.core.api.WithAssertions;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.test.context.jdbc.Sql;
 
 import java.util.List;
 
-import static org.assertj.core.api.Assertions.assertThat;
-
-class CustomerRepositoryTest extends BaseRepositoryTest {
+class CustomerRepositoryTest extends BaseRepositoryTest implements WithAssertions {
 
     @Autowired
     private CustomerRepository repository;
@@ -26,11 +25,11 @@ class CustomerRepositoryTest extends BaseRepositoryTest {
     void testSearchBy() {
         List<Customer> result = repository.findByCompanyNameContainsAllIgnoreCase("John");
         assertThat(result).hasSize(1);
-        assertThat(result.get(0).getId()).isEqualTo(1);
-        assertThat(result.get(0).getCategory()).isEqualTo("LEVEL_1");
-        assertThat(result.get(0).getFocus()).isEqualTo("TRADE");
-        assertThat(result.get(0).getStatus()).isEqualTo("ACTIVE");
-        assertThat(result.get(0).getCompanyName()).isEqualTo("JohnCorp");
+        assertThat(result.getFirst().getId()).isEqualTo(1);
+        assertThat(result.getFirst().getCategory()).isEqualTo("LEVEL_1");
+        assertThat(result.getFirst().getFocus()).isEqualTo("TRADE");
+        assertThat(result.getFirst().getStatus()).isEqualTo("ACTIVE");
+        assertThat(result.getFirst().getCompanyName()).isEqualTo("JohnCorp");
     }
 
     @Test
